grammar.txt
program:
		BEGIN compound_statement END.

compound_statement:
		BEGIN statement_list END

statement_list:
		statement | statement SEMI statement_list

statement:
		compound_statement | assignment_statement | empty

assignment_statement:
		ID ASSIGN expr

factor:
		PLUS factor | MINUS factor | EQUALS factor | NOT_EQUALS factor | INTEGER | LPAREN expr RPAREN | variable

term:
		factor ((MULTIPLY|DIVIDE) factor)*

expr:
		term ((PLUS|MINUS|EQUALS|NOT_EQUALS) term)*

variable:
		ID

empty:
		
